@@ -1,3 +1,10 @@
+Development Portal (2020-04-21 shi)
+==============================
+Update length css
+Move all charts to before budget
+Display all charts as financial overview
+
+
 Development Portal (2020-04-20 shi)
 ==============================
 Update theme settings
